fixed directory error

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
   "runArgs": ["-p", "8000:8000"],
   "forwardPorts": [8000],
   "postCreateCommand": "poetry install",
-  "postStartCommand": "poetry run uvicorn app.main:app --host 0.0.0.0 --port 8000",
+  "postStartCommand": "poetry run uvicorn main:app --host 0.0.0.0 --port 8000",
   "customizations": {
     "vscode": {
       "settings": {
